fixed issue where loading message was partially behind header

--- a/rsms/src/stylesheets/style.css
+++ b/rsms/src/stylesheets/style.css
@@ -96,7 +96,7 @@ body {
   margin-top: 0;
 }
 .checklist > .row-fluid{
-  padding-top: 50px;
+  padding-top: 60px;
 }
 .whitebg.checklist {
     padding: 0px !Important;
